# Stream_PDF_Chat

./: .gitignore  Dockerfile  README copy.md  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: requirements.txt
src/: app.py
