[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
altair = "*"
anyio = "*"
appnope = "*"
argon2-cffi = "*"
argon2-cffi-bindings = "*"
asttokens = "*"
async-lru = "*"
async-timeout = "4.0.2"
attrs = "*"
Babel = "*"
beautifulsoup4 = "*"
bleach = "*"
blinker = "*"
Bottleneck = "*"
Brotli = "*"
cachetools = "5.3.1"
certifi = "2023.7.22"
cffi = "*"
chardet = "5.2.0"
charset-normalizer = "3.2.0"
click = "8.1.6"
cohere = "3.10.0"
comm = "*"
cryptography = "42.0.8"
dataclasses-json = "0.5.9"
debugpy = "*"
decorator = "*"
defusedxml = "*"
docx2txt = "0.8"
exceptiongroup = "*"
executing = "*"
faiss-cpu = "1.7.4"
fastjsonschema = "*"
filelock = "3.12.3"
frozenlist = "1.4.0"
fsspec = "2023.9.0"
gitdb = "4.0.10"
GitPython = "3.1.32"
huggingface-hub = "0.23.4"
idna = "3.4"
importlib-metadata = "6.8.0"
ipykernel = "*"
ipython = "*"
ipython-genutils = "*"
ipywidgets = "*"
jedi = "*"
Jinja2 = "3.1.2"
joblib = "1.4.2"
json5 = "*"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.18.4"
jsonschema-specifications = "*"
jupyter-events = "*"
jupyter-lsp = "*"
jupyter_client = "*"
jupyter_core = "*"
jupyter_server = "*"
jupyter_server_terminals = "*"
jupyterlab = "*"
jupyterlab-pygments = "*"
jupyterlab-widgets = "*"
jupyterlab_server = "*"
langchain = "0.2.7"
langchain-community = "0.2.7"
langchain-core = "0.2.12"
langchain-text-splitters = "0.2.2"
langchainplus-sdk = "0.0.20"
langsmith = "0.1.84"
markdown-it-py = "3.0.0"
MarkupSafe = "*"
marshmallow = "3.20.1"
marshmallow-enum = "1.5.1"
matplotlib-inline = "*"
mdurl = "0.1.2"
mistune = "*"
mpmath = "1.3.0"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
nbclient = "*"
nbconvert = "*"
nbformat = "*"
nest-asyncio = "*"
networkx = "3.3"
notebook = "*"
notebook_shim = "*"
numexpr = "2.8.4"
numpy = "1.25.1"
openai = "0.27.8"
openapi-schema-pydantic = "1.2.4"
orjson = "3.10.6"
overrides = "*"
packaging = "*"
pandas = "2.0.3"
pandocfilters = "*"
parso = "*"
pdfminer.six = "20231228"
pdfplumber = "0.11.2"
pexpect = "*"
Pillow = "9.5.0"
platformdirs = "*"
prometheus-client = "*"
prompt-toolkit = "*"
protobuf = "4.23.4"
psutil = "*"
ptyprocess = "*"
pure-eval = "*"
pyarrow = "12.0.1"
pycparser = "*"
pycryptodome = "3.18.0"
pydantic = "1.10.11"
pydeck = "*"
Pygments = "*"
Pympler = "1.0.1"
PyMuPDF = "1.22.5"
PyPDF2 = "3.0.1"
pypdfium2 = "4.30.0"
PySocks = "*"
python-dateutil = "2.8.2"
python-dotenv = "0.21.1"
python-json-logger = "*"
pytz = "2023.3"
pytz-deprecation-shim = "0.1.0.post0"
PyYAML = "*"
pyzmq = "*"
referencing = "0.30.0"
regex = "2023.6.3"
requests = "2.31.0"
rfc3339-validator = "*"
rfc3986-validator = "*"
rich = "13.4.2"
rpds-py = "0.9.2"
safetensors = "0.4.3"
scikit-learn = "1.5.1"
scipy = "1.14.0"
Send2Trash = "*"
sentence-transformers = "3.0.1"
six = "*"
smmap = "5.0.0"
sniffio = "*"
soupsieve = "*"
SQLAlchemy = "2.0.19"
stack-data = "*"
streamlit = "1.25.0"
streamlit-javascript = "0.1.5"
sympy = "1.13.0"
tenacity = "*"
terminado = "*"
threadpoolctl = "3.5.0"
tiktoken = "0.4.0"
tinycss2 = "*"
tokenizers = "0.19.1"
toml = "*"
tomli = "*"
toolz = "*"
torch = "2.3.1"
tornado = "6.3.2"
tqdm = "4.65.0"
traitlets = "*"
transformers = "4.42.3"
typing-inspect = "0.9.0"
typing_extensions = "4.12.2"
tzdata = "*"
tzlocal = "4.3.1"
urllib3 = "1.26.16"
validators = "0.20.0"
watchdog = "4.0.1"
wcwidth = "*"
webencodings = "0.5.1"
websocket-client = "*"
widgetsnbextension = "*"
yarl = "1.9.2"
zipp = "3.16.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
